--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,19 +23,17 @@
         android:theme="@style/Theme.EGSRegistration"
         tools:targetApi="31">
         <activity
-            android:name=".ui.BeneficiaryDetailsActivity"
+            android:name="com.sipl.egstabdistribution.ui.BeneficiaryDetailsActivity"
+            android:exported="false" />
+
+        <activity
+            android:name="com.sipl.egstabdistribution.ui.RegistrationActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.ListActivity"
+            android:name="com.sipl.egstabdistribution.ui.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.RegistrationActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.SplashActivity"
+            android:name="com.sipl.egstabdistribution.ui.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,12 +42,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.sipl.egstabdistribution.MainActivity"
             android:exported="true" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.sumagoinfotech.egsregistration.provider"
+            android:authorities="com.sipl.egstabdistribution.provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
